--- a/app/users/user-list/user-list.component.html
+++ b/app/users/user-list/user-list.component.html
@@ -3,7 +3,7 @@
 </div>
 <div class="user-list row" *ngIf="users">
     <div class="col-sm-4" *ngFor="let usr of users">
-        <div class="user-card text-center">
+        <div class="user-card text-center" [routerLink]="['/users', usr.id]">
             <img [src]="usr.avatar" class="user-avatar img-rounded">
             <h2>{{usr.first_name}} {{usr.last_name}}</h2>
         </div>
