--- a/app/users/user-single/user-single.component.html
+++ b/app/users/user-single/user-single.component.html
@@ -1,4 +1,4 @@
 <div *ngIf="user">
-    <h2>{{user.first_name}} {{user.last_name}}</h2>
+    <h2>{{user.name}} <small>{{user.username}}</small></h2>
     <img [src]="user.avatar">
 </div>
