success and not succes msg

--- a/app/users/user-edit/user-edit.component.html
+++ b/app/users/user-edit/user-edit.component.html
@@ -16,6 +16,18 @@
                 name="username"
                 [(ngModel)]="user.username">
         </div>
+
+        <div 
+            *ngIf="successMsg"
+            class="alert alert-success">
+                {{ successMsg }}
+        </div>
+        <div 
+            *ngIf="notSuccessMsg"
+            class="alert alert-error">
+                {{ notSuccessMsg }}
+        </div>
+
         <button 
             type="submit" 
             class="btn btn-success">
